--- a/models/ntorq125.html
+++ b/models/ntorq125.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-
     <header class="main-header">
         <div class="container header-top">
             <a href="../index.html" class="logo">Tirumala <span>TVS</span></a>
@@ -18,67 +17,59 @@
                 <a href="../testdrive.html" class="btn-header">Book Test Drive</a>
             </div>
         </div>
-        <div class="nav-bar" id="navMenu">
+        <div class="nav-bar">
             <div class="container">
                 <ul class="nav-menu">
-                    <li class="nav-item"><a href="../index.html" style="color: var(--primary);">Home <span class="nav-arrow">↗</span></a></li>
-                    <li class="nav-item"><a href="../models.html">Back to Inventory</a></li>
-                    <li class="nav-item"><a href="../contact.html">Contact Us</a></li>
+                    <li class="nav-item"><a href="../index.html">Home</a></li>
+                    <li class="nav-item"><a href="../models.html">All Models</a></li>
+                    <li class="nav-item"><a href="../contact.html">Contact</a></li>
                 </ul>
             </div>
         </div>
     </header>
 
-    <div class="container back-btn-wrapper">
-        <a href="../models.html" class="btn-back">← Back to All Models</a>
-    </div>
-
-    <div class="model-hero" style="background: linear-gradient(to right, #f8f9fa, #eef2f5); padding: 60px 0;">
-        <div class="container" style="text-align: center;">
-            <h1 class="model-title" style="color: #1a3b8c;">TVS Ntorq 125</h1>
-            <p class="model-price" style="font-size: 1.5rem; color: #333;">Starting at ₹ 84,000*</p>
+    <div class="model-page-header">
+        <div class="container">
+            <h1 class="model-title">TVS Ntorq 125</h1>
+            <div class="model-price">Starting at ₹ 84,000*</div>
+            <p style="margin-top:10px; color:#666;">Play Smart</p>
         </div>
     </div>
 
-    <div class="container pro-detail-section">
-        <div class="pro-detail-grid">
-            <div class="pro-text-side">
-                <h2>Overview</h2>
-                <p>The <strong>TVS Ntorq 125</strong> is India's first connected scooter, designed for the Gen-Z rider. It boasts a stealth aircraft-inspired design and powerful performance that makes every ride a thrill.</p>
-
-                <h2>Engine & Power</h2>
-                <ul class="pro-specs-list">
-                    <li><strong>Engine:</strong> 124.8 cc, 3-valve, CVTi-REVV</li>
-                    <li><strong>Power:</strong> 9.38 PS @ 7000 rpm</li>
-                    <li><strong>Torque:</strong> 10.5 Nm @ 5500 rpm</li>
-                    <li><strong>Top Speed:</strong> 95 km/h</li>
-                    <li><strong>0-60 km/h:</strong> 9 seconds</li>
+    <section class="product-detail-section">
+        <div class="container product-grid">
+            <div class="product-image-wrapper">
+                <img src="../assets/ntorq125.jpg" alt="TVS Ntorq 125" onerror="this.src='https://placehold.co/800x600?text=Ntorq+125'">
+            </div>
+            <div class="product-info">
+                <h3>Overview</h3>
+                <p>India's first Bluetooth-connected scooter. The TVS Ntorq 125 offers a stealthy design, superior performance with its 3-valve engine, and a fully digital console with navigation assist.</p>
+                <h3>Key Specifications</h3>
+                <ul class="specs-list">
+                    <li><span>Engine Capacity</span> <strong>124.8 cc</strong></li>
+                    <li><span>Max Power</span> <strong>9.38 PS @ 7000 rpm</strong></li>
+                    <li><span>Max Torque</span> <strong>10.5 Nm @ 5500 rpm</strong></li>
+                    <li><span>Top Speed</span> <strong>95 km/h</strong></li>
+                    <li><span>Fuel Tank</span> <strong>5.8 Litres</strong></li>
+                    <li><span>Features</span> <strong>SmartXonnect, Gaming Console</strong></li>
                 </ul>
-
-                <h2>SmartXonnect Features</h2>
-                <ul class="pro-specs-list">
-                    <li><strong>Display:</strong> Fully Digital Gaming Console</li>
-                    <li><strong>Connectivity:</strong> Bluetooth with Call/SMS Alerts</li>
-                    <li><strong>Navigation:</strong> Turn-by-Turn Navigation</li>
-                    <li><strong>Modes:</strong> Street & Sport Mode</li>
-                </ul>
-
-                <div style="margin-top: 40px;">
-                    <a href="../testdrive.html" class="btn btn-primary" style="margin-right: 15px;">Book Test Ride</a>
-                    <a href="../quotation.html" class="btn btn-outline">Get Price Quote</a>
+                <div class="action-buttons">
+                    <a href="../testdrive.html" class="btn btn-primary btn-block">Book Test Ride</a>
+                    <a href="../quotation.html" class="btn btn-outline btn-block">Get Price Quote</a>
                 </div>
             </div>
-            <div class="pro-image-side">
-                <img src="../assets/ntorq125.jpg" alt="TVS Ntorq 125" onerror="this.src='https://placehold.co/800x600?text=Ntorq+125+Image'">
-            </div>
         </div>
-    </div>
+    </section>
 
     <footer>
-        <div class="container text-center" style="padding: 20px 0; color: #666;"><p>© 2025 Tirumala TVS. All rights reserved.</p></div>
+        <div class="footer-top-bar"><div class="container text-center" style="color:white;">Need Help? Call Sales: +91 99649 46512</div></div>
+        <div class="footer-main">
+            <div class="container footer-cols">
+                <div class="footer-col"><h4>Quick Links</h4><ul class="footer-links"><li><a href="../index.html">Home</a></li><li><a href="../service.html">Book Service</a></li><li><a href="../contact.html">Contact Us</a></li></ul></div>
+                <div class="footer-col"><h4>Showroom</h4><p>Tirumala TVS Bidarahalli,<br>Main Road, Bangalore - 560049</p></div>
+            </div>
+        </div>
+        <div class="container footer-bottom"><div>Copyright © 2025 Tirumala TVS.</div></div>
     </footer>
-    <a href="https://wa.me/919964946512" class="whatsapp-float" target="_blank">💬</a>
-    <div class="scroll-top-btn" onclick="window.scrollTo(0,0);">▲</div>
-    <script>window.addEventListener('scroll', function() { var s = document.querySelector('.scroll-top-btn'); if(window.scrollY > 300) s.classList.add('visible'); else s.classList.remove('visible'); });</script>
 </body>
 </html>
