--- a/models/iqube.html
+++ b/models/iqube.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-
     <header class="main-header">
         <div class="container header-top">
             <a href="../index.html" class="logo">Tirumala <span>TVS</span></a>
@@ -18,67 +17,59 @@
                 <a href="../testdrive.html" class="btn-header">Book Test Drive</a>
             </div>
         </div>
-        <div class="nav-bar" id="navMenu">
+        <div class="nav-bar">
             <div class="container">
                 <ul class="nav-menu">
-                    <li class="nav-item"><a href="../index.html" style="color: var(--primary);">Home <span class="nav-arrow">↗</span></a></li>
-                    <li class="nav-item"><a href="../models.html">Back to Inventory</a></li>
-                    <li class="nav-item"><a href="../contact.html">Contact Us</a></li>
+                    <li class="nav-item"><a href="../index.html">Home</a></li>
+                    <li class="nav-item"><a href="../models.html">All Models</a></li>
+                    <li class="nav-item"><a href="../contact.html">Contact</a></li>
                 </ul>
             </div>
         </div>
     </header>
 
-    <div class="container back-btn-wrapper">
-        <a href="../models.html" class="btn-back">← Back to All Models</a>
-    </div>
-
-    <div class="model-hero" style="background: linear-gradient(to right, #f8f9fa, #eef2f5); padding: 60px 0;">
-        <div class="container" style="text-align: center;">
-            <h1 class="model-title" style="color: #1a3b8c;">TVS iQube Electric</h1>
-            <p class="model-price" style="font-size: 1.5rem; color: #333;">Starting at ₹ 1,17,000*</p>
+    <div class="model-page-header">
+        <div class="container">
+            <h1 class="model-title">TVS iQube Electric</h1>
+            <div class="model-price">Starting at ₹ 1,17,000*</div>
+            <p style="margin-top:10px; color:#666;">Smartly Simple</p>
         </div>
     </div>
 
-    <div class="container pro-detail-section">
-        <div class="pro-detail-grid">
-            <div class="pro-text-side">
-                <h2>Overview</h2>
-                <p>The <strong>TVS iQube</strong> is the smart electric scooter for the smart generation. With zero emissions, silent operation, and smart connectivity, it is the future of urban commuting.</p>
-
-                <h2>Electric Performance</h2>
-                <ul class="pro-specs-list">
-                    <li><strong>Range:</strong> 100 km (Real World)</li>
-                    <li><strong>Top Speed:</strong> 78 km/h</li>
-                    <li><strong>Acceleration:</strong> 0-40 km/h in 4.2 seconds</li>
-                    <li><strong>Motor:</strong> 4.4 kW BLDC Hub Motor</li>
-                    <li><strong>Charging:</strong> 0-80% in 4 hours 30 mins</li>
+    <section class="product-detail-section">
+        <div class="container product-grid">
+            <div class="product-image-wrapper">
+                <img src="../assets/iqube.jpg" alt="TVS iQube" onerror="this.src='https://placehold.co/800x600?text=iQube+Electric'">
+            </div>
+            <div class="product-info">
+                <h3>Overview</h3>
+                <p>The smart choice for a greener tomorrow. The TVS iQube offers a silent, comfortable, and tech-loaded ride with zero emissions. Perfect for city commuting with ample storage and smart connectivity.</p>
+                <h3>Key Specifications</h3>
+                <ul class="specs-list">
+                    <li><span>Range</span> <strong>100 km (Eco Mode)</strong></li>
+                    <li><span>Top Speed</span> <strong>78 km/h</strong></li>
+                    <li><span>Charging Time</span> <strong>4 hours 30 mins (0-80%)</strong></li>
+                    <li><span>Battery Warranty</span> <strong>3 Years / 50,000 km</strong></li>
+                    <li><span>Acceleration</span> <strong>0-40 km/h in 4.2 sec</strong></li>
+                    <li><span>Smart Features</span> <strong>Geofencing, Remote Charge Status</strong></li>
                 </ul>
-
-                <h2>Smart Features</h2>
-                <ul class="pro-specs-list">
-                    <li><strong>Dashboard:</strong> 7-inch TFT Touchscreen (ST Variant)</li>
-                    <li><strong>Connectivity:</strong> Alexa Integration, Music, Call Alerts</li>
-                    <li><strong>Reverse Mode:</strong> Q-Park Assist</li>
-                    <li><strong>Key:</strong> Flip Key with LED Light</li>
-                </ul>
-
-                <div style="margin-top: 40px;">
-                    <a href="../testdrive.html" class="btn btn-primary" style="margin-right: 15px;">Book Test Ride</a>
-                    <a href="../quotation.html" class="btn btn-outline">Get Price Quote</a>
+                <div class="action-buttons">
+                    <a href="../testdrive.html" class="btn btn-primary btn-block">Book Test Ride</a>
+                    <a href="../quotation.html" class="btn btn-outline btn-block">Get Price Quote</a>
                 </div>
             </div>
-            <div class="pro-image-side">
-                <img src="../assets/iqube.jpg" alt="TVS iQube" onerror="this.src='https://placehold.co/800x600?text=iQube+Electric+Image'">
-            </div>
         </div>
-    </div>
+    </section>
 
     <footer>
-        <div class="container text-center" style="padding: 20px 0; color: #666;"><p>© 2025 Tirumala TVS. All rights reserved.</p></div>
+        <div class="footer-top-bar"><div class="container text-center" style="color:white;">Need Help? Call Sales: +91 99649 46512</div></div>
+        <div class="footer-main">
+            <div class="container footer-cols">
+                <div class="footer-col"><h4>Quick Links</h4><ul class="footer-links"><li><a href="../index.html">Home</a></li><li><a href="../service.html">Book Service</a></li><li><a href="../contact.html">Contact Us</a></li></ul></div>
+                <div class="footer-col"><h4>Showroom</h4><p>Tirumala TVS Bidarahalli,<br>Main Road, Bangalore - 560049</p></div>
+            </div>
+        </div>
+        <div class="container footer-bottom"><div>Copyright © 2025 Tirumala TVS.</div></div>
     </footer>
-    <a href="https://wa.me/919964946512" class="whatsapp-float" target="_blank">💬</a>
-    <div class="scroll-top-btn" onclick="window.scrollTo(0,0);">▲</div>
-    <script>window.addEventListener('scroll', function() { var s = document.querySelector('.scroll-top-btn'); if(window.scrollY > 300) s.classList.add('visible'); else s.classList.remove('visible'); });</script>
 </body>
 </html>
