--- a/models/xl100.html
+++ b/models/xl100.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-
     <header class="main-header">
         <div class="container header-top">
             <a href="../index.html" class="logo">Tirumala <span>TVS</span></a>
@@ -18,87 +17,59 @@
                 <a href="../testdrive.html" class="btn-header">Book Test Drive</a>
             </div>
         </div>
-        <div class="nav-bar" id="navMenu">
+        <div class="nav-bar">
             <div class="container">
                 <ul class="nav-menu">
-                    <li class="nav-item"><a href="../index.html" style="color: var(--primary);">Home <span class="nav-arrow">↗</span></a></li>
-                    <li class="nav-item"><a href="../models.html">Back to Inventory</a></li>
-                    <li class="nav-item"><a href="../contact.html">Contact Us</a></li>
+                    <li class="nav-item"><a href="../index.html">Home</a></li>
+                    <li class="nav-item"><a href="../models.html">All Models</a></li>
+                    <li class="nav-item"><a href="../contact.html">Contact</a></li>
                 </ul>
             </div>
         </div>
     </header>
 
-    <div class="container back-btn-wrapper">
-        <a href="../models.html" class="btn-back">← Back to All Models</a>
-    </div>
-
-    <div class="model-hero" style="background: linear-gradient(to right, #f8f9fa, #eef2f5); padding: 60px 0;">
-        <div class="container" style="text-align: center;">
-            <h1 class="model-title" style="color: #1a3b8c;">TVS XL100 Heavy Duty</h1>
-            <p class="model-price" style="font-size: 1.5rem; color: #333;">Starting at ₹ 46,000*</p>
+    <div class="model-page-header">
+        <div class="container">
+            <h1 class="model-title">TVS XL100 Heavy Duty</h1>
+            <div class="model-price">Starting at ₹ 46,000*</div>
+            <p style="margin-top:10px; color:#666;">The Multi-Utility Vehicle</p>
         </div>
     </div>
 
-    <div class="container pro-detail-section">
-        <div class="pro-detail-grid">
-            
-            <div class="pro-text-side">
-                <h2>Overview</h2>
-                <p>The <strong>TVS XL100 Heavy Duty</strong> is India's most reliable multi-utility vehicle. Built tough for heavy loads, it now comes with i-Touch Start technology for silent and instant starting. It is the perfect partner for your business needs.</p>
-
-                <h2>Engine & Performance</h2>
-                <ul class="pro-specs-list">
-                    <li><strong>Engine:</strong> 99.7 cc, 4-stroke, single cylinder</li>
-                    <li><strong>Power:</strong> 4.4 PS @ 6000 rpm</li>
-                    <li><strong>Torque:</strong> 6.5 Nm @ 3500 rpm</li>
-                    <li><strong>Technology:</strong> ETFi (Eco Thrust Fuel Injection) for 15% more mileage</li>
-                    <li><strong>Load Capacity:</strong> Heavy Duty Shock Absorbers</li>
+    <section class="product-detail-section">
+        <div class="container product-grid">
+            <div class="product-image-wrapper">
+                <img src="../assets/xl100.jpg" alt="TVS XL100" onerror="this.src='https://placehold.co/800x600?text=XL100+Heavy+Duty'">
+            </div>
+            <div class="product-info">
+                <h3>Overview</h3>
+                <p>The most reliable workhorse for your business needs. The TVS XL100 Heavy Duty comes with i-Touch start, 15% more mileage, and a heavy-duty load-carrying capability.</p>
+                <h3>Key Specifications</h3>
+                <ul class="specs-list">
+                    <li><span>Engine Capacity</span> <strong>99.7 cc</strong></li>
+                    <li><span>Max Power</span> <strong>4.4 PS @ 6000 rpm</strong></li>
+                    <li><span>Max Torque</span> <strong>6.5 Nm @ 3500 rpm</strong></li>
+                    <li><span>Payload</span> <strong>130 kg</strong></li>
+                    <li><span>Start Technology</span> <strong>Integrated Starter Generator</strong></li>
+                    <li><span>Kerb Weight</span> <strong>89 kg</strong></li>
                 </ul>
-
-                <h2>Key Features</h2>
-                <ul class="pro-specs-list">
-                    <li><strong>Start System:</strong> Silent i-Touch Start</li>
-                    <li><strong>Seat:</strong> Split Seat (Detachable rear seat for loading)</li>
-                    <li><strong>Charging:</strong> Mobile Charging Port</li>
-                    <li><strong>Safety:</strong> Roll-over Sensor & Sync Braking</li>
-                </ul>
-
-                <div style="margin-top: 40px;">
-                    <a href="../testdrive.html" class="btn btn-primary" style="margin-right: 15px;">Book Test Ride</a>
-                    <a href="../quotation.html" class="btn btn-outline">Get Price Quote</a>
+                <div class="action-buttons">
+                    <a href="../testdrive.html" class="btn btn-primary btn-block">Book Test Ride</a>
+                    <a href="../quotation.html" class="btn btn-outline btn-block">Get Price Quote</a>
                 </div>
             </div>
-
-            <div class="pro-image-side">
-                <img src="../assets/xl100.jpg" alt="TVS XL100 Heavy Duty" onerror="this.src='https://placehold.co/800x600?text=XL100+Image'">
-            </div>
-
         </div>
-    </div>
+    </section>
 
     <footer>
-        <div class="footer-top-bar">
-            <div class="container footer-contact-row">
-                <div class="footer-contact-item"><div class="footer-icon-circle">✉</div><div class="footer-contact-text">tirumalatvs716@gmail.com</div></div>
-                <div class="footer-contact-item"><div class="footer-icon-circle">📞</div><div><div class="footer-contact-text">Sales: +91 99649 46512</div><div class="footer-contact-text" style="font-size:0.9em; opacity:0.9;">Service: +91 99649 46511</div></div></div>
+        <div class="footer-top-bar"><div class="container text-center" style="color:white;">Need Help? Call Sales: +91 99649 46512</div></div>
+        <div class="footer-main">
+            <div class="container footer-cols">
+                <div class="footer-col"><h4>Quick Links</h4><ul class="footer-links"><li><a href="../index.html">Home</a></li><li><a href="../service.html">Book Service</a></li><li><a href="../contact.html">Contact Us</a></li></ul></div>
+                <div class="footer-col"><h4>Showroom</h4><p>Tirumala TVS Bidarahalli,<br>Main Road, Bangalore - 560049</p></div>
             </div>
         </div>
-        <div class="container text-center" style="padding: 20px 0; color: #666;">
-            <p>© 2025 Tirumala TVS. All rights reserved.</p>
-        </div>
+        <div class="container footer-bottom"><div>Copyright © 2025 Tirumala TVS.</div></div>
     </footer>
-
-    <a href="https://wa.me/919964946512" class="whatsapp-float" target="_blank">💬</a>
-    <div class="scroll-top-btn" onclick="window.scrollTo(0,0);">▲</div>
-
-    <script>
-        window.addEventListener('scroll', function() {
-            var scrollBtn = document.querySelector('.scroll-top-btn');
-            if (window.scrollY > 300) { scrollBtn.classList.add('visible'); } 
-            else { scrollBtn.classList.remove('visible'); }
-        });
-    </script>
-
 </body>
 </html>
