--- a/models/apache200.html
+++ b/models/apache200.html
@@ -3,12 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Apache RTR 200 4V | Tirumala TVS</title>
+    <title>TVS Apache RTR 200 4V | Tirumala TVS</title>
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;500;700&family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-
     <header class="main-header">
         <div class="container header-top">
             <a href="../index.html" class="logo">Tirumala <span>TVS</span></a>
@@ -18,67 +17,59 @@
                 <a href="../testdrive.html" class="btn-header">Book Test Drive</a>
             </div>
         </div>
-        <div class="nav-bar" id="navMenu">
+        <div class="nav-bar">
             <div class="container">
                 <ul class="nav-menu">
-                    <li class="nav-item"><a href="../index.html" style="color: var(--primary);">Home <span class="nav-arrow">↗</span></a></li>
-                    <li class="nav-item"><a href="../models.html">Back to Inventory</a></li>
-                    <li class="nav-item"><a href="../contact.html">Contact Us</a></li>
+                    <li class="nav-item"><a href="../index.html">Home</a></li>
+                    <li class="nav-item"><a href="../models.html">All Models</a></li>
+                    <li class="nav-item"><a href="../contact.html">Contact</a></li>
                 </ul>
             </div>
         </div>
     </header>
 
-    <div class="container back-btn-wrapper">
-        <a href="../models.html" class="btn-back">← Back to All Models</a>
-    </div>
-
-    <div class="model-hero" style="background: linear-gradient(to right, #f8f9fa, #eef2f5); padding: 60px 0;">
-        <div class="container" style="text-align: center;">
-            <h1 class="model-title" style="color: #1a3b8c;">Apache RTR 200 4V</h1>
-            <p class="model-price" style="font-size: 1.5rem; color: #333;">Starting at ₹ 1,46,000*</p>
+    <div class="model-page-header">
+        <div class="container">
+            <h1 class="model-title">Apache RTR 200 4V</h1>
+            <div class="model-price">Starting at ₹ 1,46,000*</div>
+            <p style="margin-top:10px; color:#666;">Engineered To Outperform</p>
         </div>
     </div>
 
-    <div class="container pro-detail-section">
-        <div class="pro-detail-grid">
-            <div class="pro-text-side">
-                <h2>Overview</h2>
-                <p>The <strong>Apache RTR 200 4V</strong> is the ultimate street fighter. It brings segment-first features like adjustable suspension and levers, making it a track-ready machine for the road.</p>
-
-                <h2>Engine & Performance</h2>
-                <ul class="pro-specs-list">
-                    <li><strong>Engine:</strong> 197.75 cc, 4-valve, Oil-cooled</li>
-                    <li><strong>Max Power:</strong> 20.82 PS @ 9000 rpm</li>
-                    <li><strong>Max Torque:</strong> 17.25 Nm @ 7250 rpm</li>
-                    <li><strong>0-60 km/h:</strong> 3.9 seconds</li>
-                    <li><strong>Clutch:</strong> Race Tuned Slipper Clutch</li>
+    <section class="product-detail-section">
+        <div class="container product-grid">
+            <div class="product-image-wrapper">
+                <img src="../assets/apache200.jpg" alt="Apache 200" onerror="this.src='https://placehold.co/800x600?text=Apache+200+4V'">
+            </div>
+            <div class="product-info">
+                <h3>Overview</h3>
+                <p>The Apache RTR 200 4V is the first in its class to feature Ride Modes, Adjustable Suspension, and Adjustable Levers. It brings racing technology to the streets with its RT-Fi engine.</p>
+                <h3>Key Specifications</h3>
+                <ul class="specs-list">
+                    <li><span>Engine Capacity</span> <strong>197.75 cc</strong></li>
+                    <li><span>Max Power</span> <strong>20.82 PS @ 9000 rpm</strong></li>
+                    <li><span>Max Torque</span> <strong>17.25 Nm @ 7250 rpm</strong></li>
+                    <li><span>0-60 km/h</span> <strong>3.9 seconds</strong></li>
+                    <li><span>Suspension</span> <strong>Showa (Preload Adjustable)</strong></li>
+                    <li><span>Brakes</span> <strong>Dual Channel ABS with RLP</strong></li>
                 </ul>
-
-                <h2>Segment-First Features</h2>
-                <ul class="pro-specs-list">
-                    <li><strong>Ride Modes:</strong> Sport, Urban, Rain</li>
-                    <li><strong>Suspension:</strong> Showa Adjustable Front Suspension</li>
-                    <li><strong>Levers:</strong> Adjustable Brake & Clutch Levers</li>
-                    <li><strong>Braking:</strong> Dual Channel ABS with RLP</li>
-                </ul>
-
-                <div style="margin-top: 40px;">
-                    <a href="../testdrive.html" class="btn btn-primary" style="margin-right: 15px;">Book Test Ride</a>
-                    <a href="../quotation.html" class="btn btn-outline">Get Price Quote</a>
+                <div class="action-buttons">
+                    <a href="../testdrive.html" class="btn btn-primary btn-block">Book Test Ride</a>
+                    <a href="../quotation.html" class="btn btn-outline btn-block">Get Price Quote</a>
                 </div>
             </div>
-            <div class="pro-image-side">
-                <img src="../assets/apache200.jpg" alt="Apache 200 4V" onerror="this.src='https://placehold.co/800x600?text=Apache+200+Image'">
-            </div>
         </div>
-    </div>
+    </section>
 
     <footer>
-        <div class="container text-center" style="padding: 20px 0; color: #666;"><p>© 2025 Tirumala TVS. All rights reserved.</p></div>
+        <div class="footer-top-bar"><div class="container text-center" style="color:white;">Need Help? Call Sales: +91 99649 46512</div></div>
+        <div class="footer-main">
+            <div class="container footer-cols">
+                <div class="footer-col"><h4>Quick Links</h4><ul class="footer-links"><li><a href="../index.html">Home</a></li><li><a href="../service.html">Book Service</a></li><li><a href="../contact.html">Contact Us</a></li></ul></div>
+                <div class="footer-col"><h4>Showroom</h4><p>Tirumala TVS Bidarahalli,<br>Main Road, Bangalore - 560049</p></div>
+            </div>
+        </div>
+        <div class="container footer-bottom"><div>Copyright © 2025 Tirumala TVS.</div></div>
     </footer>
-    <a href="https://wa.me/919964946512" class="whatsapp-float" target="_blank">💬</a>
-    <div class="scroll-top-btn" onclick="window.scrollTo(0,0);">▲</div>
-    <script>window.addEventListener('scroll', function() { var s = document.querySelector('.scroll-top-btn'); if(window.scrollY > 300) s.classList.add('visible'); else s.classList.remove('visible'); });</script>
 </body>
 </html>
