--- a/models/radeon.html
+++ b/models/radeon.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-
     <header class="main-header">
         <div class="container header-top">
             <a href="../index.html" class="logo">Tirumala <span>TVS</span></a>
@@ -18,66 +17,59 @@
                 <a href="../testdrive.html" class="btn-header">Book Test Drive</a>
             </div>
         </div>
-        <div class="nav-bar" id="navMenu">
+        <div class="nav-bar">
             <div class="container">
                 <ul class="nav-menu">
-                    <li class="nav-item"><a href="../index.html" style="color: var(--primary);">Home <span class="nav-arrow">↗</span></a></li>
-                    <li class="nav-item"><a href="../models.html">Back to Inventory</a></li>
-                    <li class="nav-item"><a href="../contact.html">Contact Us</a></li>
+                    <li class="nav-item"><a href="../index.html">Home</a></li>
+                    <li class="nav-item"><a href="../models.html">All Models</a></li>
+                    <li class="nav-item"><a href="../contact.html">Contact</a></li>
                 </ul>
             </div>
         </div>
     </header>
 
-    <div class="container back-btn-wrapper">
-        <a href="../models.html" class="btn-back">← Back to All Models</a>
-    </div>
-
-    <div class="model-hero" style="background: linear-gradient(to right, #f8f9fa, #eef2f5); padding: 60px 0;">
-        <div class="container" style="text-align: center;">
-            <h1 class="model-title" style="color: #1a3b8c;">TVS Radeon</h1>
-            <p class="model-price" style="font-size: 1.5rem; color: #333;">Starting at ₹ 62,000*</p>
+    <div class="model-page-header">
+        <div class="container">
+            <h1 class="model-title">TVS Radeon</h1>
+            <div class="model-price">Starting at ₹ 62,000*</div>
+            <p style="margin-top:10px; color:#666;">Solid. Strong. Stylish.</p>
         </div>
     </div>
 
-    <div class="container pro-detail-section">
-        <div class="pro-detail-grid">
-            <div class="pro-text-side">
-                <h2>Overview</h2>
-                <p>The <strong>TVS Radeon</strong> is a robust commuter motorcycle built for strength and comfort. With its distinct "Buland" metal build and comfortable long seat, it is designed for the everyday Indian rider.</p>
-
-                <h2>Engine & Efficiency</h2>
-                <ul class="pro-specs-list">
-                    <li><strong>Engine:</strong> 109.7 cc, Dura-Life Engine</li>
-                    <li><strong>Mileage:</strong> 65+ kmpl (Real World)</li>
-                    <li><strong>Technology:</strong> ETFi for 15% better mileage</li>
-                    <li><strong>Durability:</strong> Long-life Engine Warranty</li>
+    <section class="product-detail-section">
+        <div class="container product-grid">
+            <div class="product-image-wrapper">
+                <img src="../assets/radeon.jpg" alt="TVS Radeon" onerror="this.src='https://placehold.co/800x600?text=Radeon'">
+            </div>
+            <div class="product-info">
+                <h3>Overview</h3>
+                <p>A sturdy commuter bike built for the Indian roads. The TVS Radeon combines a robust metal build with a comfortable long seat and chrome styling. Features a Real-Time Mileage Indicator (RTM).</p>
+                <h3>Key Specifications</h3>
+                <ul class="specs-list">
+                    <li><span>Engine Capacity</span> <strong>109.7 cc</strong></li>
+                    <li><span>Max Power</span> <strong>8.19 PS @ 7350 rpm</strong></li>
+                    <li><span>Mileage</span> <strong>69 kmpl (Approx)</strong></li>
+                    <li><span>Brakes</span> <strong>Synchronized Braking Technology</strong></li>
+                    <li><span>Feature</span> <strong>USB Charging Spot</strong></li>
+                    <li><span>Ground Clearance</span> <strong>180 mm</strong></li>
                 </ul>
-
-                <h2>Features</h2>
-                <ul class="pro-specs-list">
-                    <li><strong>Display:</strong> Reverse LCD Cluster with RTM</li>
-                    <li><strong>Seat:</strong> Largest Cushioned Seat in Segment</li>
-                    <li><strong>Safety:</strong> Synchronized Braking Technology (SBT)</li>
-                    <li><strong>Charging:</strong> USB Charger</li>
-                </ul>
-
-                <div style="margin-top: 40px;">
-                    <a href="../testdrive.html" class="btn btn-primary" style="margin-right: 15px;">Book Test Ride</a>
-                    <a href="../quotation.html" class="btn btn-outline">Get Price Quote</a>
+                <div class="action-buttons">
+                    <a href="../testdrive.html" class="btn btn-primary btn-block">Book Test Ride</a>
+                    <a href="../quotation.html" class="btn btn-outline btn-block">Get Price Quote</a>
                 </div>
             </div>
-            <div class="pro-image-side">
-                <img src="../assets/radeon.jpg" alt="TVS Radeon" onerror="this.src='https://placehold.co/800x600?text=Radeon+Image'">
-            </div>
         </div>
-    </div>
+    </section>
 
     <footer>
-        <div class="container text-center" style="padding: 20px 0; color: #666;"><p>© 2025 Tirumala TVS. All rights reserved.</p></div>
+        <div class="footer-top-bar"><div class="container text-center" style="color:white;">Need Help? Call Sales: +91 99649 46512</div></div>
+        <div class="footer-main">
+            <div class="container footer-cols">
+                <div class="footer-col"><h4>Quick Links</h4><ul class="footer-links"><li><a href="../index.html">Home</a></li><li><a href="../service.html">Book Service</a></li><li><a href="../contact.html">Contact Us</a></li></ul></div>
+                <div class="footer-col"><h4>Showroom</h4><p>Tirumala TVS Bidarahalli,<br>Main Road, Bangalore - 560049</p></div>
+            </div>
+        </div>
+        <div class="container footer-bottom"><div>Copyright © 2025 Tirumala TVS.</div></div>
     </footer>
-    <a href="https://wa.me/919964946512" class="whatsapp-float" target="_blank">💬</a>
-    <div class="scroll-top-btn" onclick="window.scrollTo(0,0);">▲</div>
-    <script>window.addEventListener('scroll', function() { var s = document.querySelector('.scroll-top-btn'); if(window.scrollY > 300) s.classList.add('visible'); else s.classList.remove('visible'); });</script>
 </body>
 </html>
