--- a/models/zest110.html
+++ b/models/zest110.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-
     <header class="main-header">
         <div class="container header-top">
             <a href="../index.html" class="logo">Tirumala <span>TVS</span></a>
@@ -18,66 +17,59 @@
                 <a href="../testdrive.html" class="btn-header">Book Test Drive</a>
             </div>
         </div>
-        <div class="nav-bar" id="navMenu">
+        <div class="nav-bar">
             <div class="container">
                 <ul class="nav-menu">
-                    <li class="nav-item"><a href="../index.html" style="color: var(--primary);">Home <span class="nav-arrow">↗</span></a></li>
-                    <li class="nav-item"><a href="../models.html">Back to Inventory</a></li>
-                    <li class="nav-item"><a href="../contact.html">Contact Us</a></li>
+                    <li class="nav-item"><a href="../index.html">Home</a></li>
+                    <li class="nav-item"><a href="../models.html">All Models</a></li>
+                    <li class="nav-item"><a href="../contact.html">Contact</a></li>
                 </ul>
             </div>
         </div>
     </header>
 
-    <div class="container back-btn-wrapper">
-        <a href="../models.html" class="btn-back">← Back to All Models</a>
-    </div>
-
-    <div class="model-hero" style="background: linear-gradient(to right, #f8f9fa, #eef2f5); padding: 60px 0;">
-        <div class="container" style="text-align: center;">
-            <h1 class="model-title" style="color: #1a3b8c;">TVS Scooty Zest 110</h1>
-            <p class="model-price" style="font-size: 1.5rem; color: #333;">Starting at ₹ 75,000*</p>
+    <div class="model-page-header">
+        <div class="container">
+            <h1 class="model-title">TVS Scooty Zest 110</h1>
+            <div class="model-price">Starting at ₹ 75,000*</div>
+            <p style="margin-top:10px; color:#666;">Compact Power</p>
         </div>
     </div>
 
-    <div class="container pro-detail-section">
-        <div class="pro-detail-grid">
-            <div class="pro-text-side">
-                <h2>Overview</h2>
-                <p>The <strong>TVS Scooty Zest 110</strong> is designed for the free-spirited. It is the first 110cc scooter to conquer the Himalayas, proving its power and durability. Compact, peppy, and easy to handle.</p>
-
-                <h2>Engine & Efficiency</h2>
-                <ul class="pro-specs-list">
-                    <li><strong>Engine:</strong> 109.7 cc, ETFi Technology</li>
-                    <li><strong>Power:</strong> 7.81 PS @ 7500 rpm</li>
-                    <li><strong>Torque:</strong> 8.8 Nm @ 5500 rpm</li>
-                    <li><strong>Acceleration:</strong> 0-60 km/h in 11.1 seconds</li>
+    <section class="product-detail-section">
+        <div class="container product-grid">
+            <div class="product-image-wrapper">
+                <img src="../assets/zest110.jpg" alt="Scooty Zest 110" onerror="this.src='https://placehold.co/800x600?text=Zest+110'">
+            </div>
+            <div class="product-info">
+                <h3>Overview</h3>
+                <p>The TVS Scooty Zest 110 is the perfect blend of power and maneuverability. Lightweight and zippy, it makes city commuting fun and effortless with its ETFi engine and best-in-class torque.</p>
+                <h3>Key Specifications</h3>
+                <ul class="specs-list">
+                    <li><span>Engine Capacity</span> <strong>109.7 cc</strong></li>
+                    <li><span>Max Power</span> <strong>7.81 PS @ 7500 rpm</strong></li>
+                    <li><span>Max Torque</span> <strong>8.8 Nm @ 5500 rpm</strong></li>
+                    <li><span>Kerb Weight</span> <strong>103 kg</strong></li>
+                    <li><span>Storage</span> <strong>19 Litres</strong></li>
+                    <li><span>Features</span> <strong>LED DRL, USB Charger</strong></li>
                 </ul>
-
-                <h2>Comfort Features</h2>
-                <ul class="pro-specs-list">
-                    <li><strong>Storage:</strong> 19 Litres Under-seat Storage</li>
-                    <li><strong>Handling:</strong> Best-in-class Agility</li>
-                    <li><strong>Charging:</strong> USB Smartphone Charger</li>
-                    <li><strong>Tyres:</strong> Tubeless Tyres with Anti-Skid</li>
-                </ul>
-
-                <div style="margin-top: 40px;">
-                    <a href="../testdrive.html" class="btn btn-primary" style="margin-right: 15px;">Book Test Ride</a>
-                    <a href="../quotation.html" class="btn btn-outline">Get Price Quote</a>
+                <div class="action-buttons">
+                    <a href="../testdrive.html" class="btn btn-primary btn-block">Book Test Ride</a>
+                    <a href="../quotation.html" class="btn btn-outline btn-block">Get Price Quote</a>
                 </div>
             </div>
-            <div class="pro-image-side">
-                <img src="../assets/zest110.jpg" alt="TVS Zest" onerror="this.src='https://placehold.co/800x600?text=Zest+110+Image'">
-            </div>
         </div>
-    </div>
+    </section>
 
     <footer>
-        <div class="container text-center" style="padding: 20px 0; color: #666;"><p>© 2025 Tirumala TVS. All rights reserved.</p></div>
+        <div class="footer-top-bar"><div class="container text-center" style="color:white;">Need Help? Call Sales: +91 99649 46512</div></div>
+        <div class="footer-main">
+            <div class="container footer-cols">
+                <div class="footer-col"><h4>Quick Links</h4><ul class="footer-links"><li><a href="../index.html">Home</a></li><li><a href="../service.html">Book Service</a></li><li><a href="../contact.html">Contact Us</a></li></ul></div>
+                <div class="footer-col"><h4>Showroom</h4><p>Tirumala TVS Bidarahalli,<br>Main Road, Bangalore - 560049</p></div>
+            </div>
+        </div>
+        <div class="container footer-bottom"><div>Copyright © 2025 Tirumala TVS.</div></div>
     </footer>
-    <a href="https://wa.me/919964946512" class="whatsapp-float" target="_blank">💬</a>
-    <div class="scroll-top-btn" onclick="window.scrollTo(0,0);">▲</div>
-    <script>window.addEventListener('scroll', function() { var s = document.querySelector('.scroll-top-btn'); if(window.scrollY > 300) s.classList.add('visible'); else s.classList.remove('visible'); });</script>
 </body>
 </html>
