--- a/models/jupiter125.html
+++ b/models/jupiter125.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>New TVS Jupiter 110 | Tirumala TVS</title>
+    <title>TVS Jupiter 125 | Tirumala TVS</title>
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;500;700&family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css">
 </head>
@@ -30,28 +30,28 @@
 
     <div class="model-page-header">
         <div class="container">
-            <h1 class="model-title">New TVS Jupiter 110</h1>
-            <div class="model-price">Starting at ₹ 73,700*</div>
-            <p style="margin-top:10px; color:#666;">Zyada Ka Fayda</p>
+            <h1 class="model-title">TVS Jupiter 125</h1>
+            <div class="model-price">Starting at ₹ 86,000*</div>
+            <p style="margin-top:10px; color:#666;">Zyada Se Bhi Zyada</p>
         </div>
     </div>
 
     <section class="product-detail-section">
         <div class="container product-grid">
             <div class="product-image-wrapper">
-                <img src="../assets/jupiter113.jpg" alt="New Jupiter 110" onerror="this.src='https://placehold.co/800x600?text=Jupiter+110'">
+                <img src="../assets/jupiter125.jpg" alt="Jupiter 125" onerror="this.src='https://placehold.co/800x600?text=Jupiter+125'">
             </div>
             <div class="product-info">
                 <h3>Overview</h3>
-                <p>The new TVS Jupiter 110 is India's most loved family scooter, now even better. With Next Gen 110cc engine, it delivers superior mileage, more power, and best-in-class comfort for every ride.</p>
+                <p>The TVS Jupiter 125 is engineered to give you "Zyada" of everything. It features the segment-largest under-seat storage that fits two full-face helmets, progressive styling, and uncompromised comfort.</p>
                 <h3>Key Specifications</h3>
                 <ul class="specs-list">
-                    <li><span>Engine Capacity</span> <strong>109.7 cc</strong></li>
-                    <li><span>Max Power</span> <strong>7.88 PS @ 7500 rpm</strong></li>
-                    <li><span>Max Torque</span> <strong>8.8 Nm @ 5500 rpm</strong></li>
-                    <li><span>Mileage</span> <strong>62 kmpl (WMTC)</strong></li>
-                    <li><span>Storage</span> <strong>21 Litres</strong></li>
-                    <li><span>Features</span> <strong>IntelliGO, LED Headlamp</strong></li>
+                    <li><span>Engine Capacity</span> <strong>124.8 cc</strong></li>
+                    <li><span>Max Power</span> <strong>8.15 PS @ 6500 rpm</strong></li>
+                    <li><span>Storage</span> <strong>33 Litres (Fits 2 Helmets)</strong></li>
+                    <li><span>Fuel Fill</span> <strong>External Front Fill</strong></li>
+                    <li><span>Mileage</span> <strong>50+ kmpl (City)</strong></li>
+                    <li><span>Features</span> <strong>Side Stand Inhibitor, Mobile Charger</strong></li>
                 </ul>
                 <div class="action-buttons">
                     <a href="../testdrive.html" class="btn btn-primary btn-block">Book Test Ride</a>
