--- a/index.html
+++ b/index.html
@@ -62,35 +62,39 @@
         </div>
     </section>
 
-    <div class="container hotline-section">
-        <div class="hotline-banner">
-            <div class="hotline-left">
-                <div class="hotline-circle">📞</div>
-                <div class="hotline-numbers">
-                    <div class="number-block">
-                        <span>Sales Hotline</span>
-                        <a href="tel:+919964946512">+91 99649 46512</a>
-                    </div>
-                    <div class="number-block">
-                        <span>Service Hotline</span>
-                        <a href="tel:+919964946511">+91 99649 46511</a>
+    <div class="hotline-section">
+        <div class="container">
+            <div class="hotline-banner">
+                <div class="hotline-left">
+                    <div class="hotline-circle">📞</div>
+                    <div class="hotline-numbers">
+                        <div class="number-block">
+                            <span>Sales Hotline</span>
+                            <a href="tel:+919964946512">+91 99649 46512</a>
+                        </div>
+                        <div class="number-block">
+                            <span>Service Hotline</span>
+                            <a href="tel:+919964946511">+91 99649 46511</a>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="hotline-center">Use our hotline for quick get<br>in touch for 24 hours.</div>
-            <div class="hotline-right">
-                <div style="font-family:'Oswald'; font-weight:bold; font-size:1.5rem; color:#e31e2d; font-style:italic;">TVS Racing 🐎</div>
+                <div class="hotline-center">
+                    Use our hotline for quick get<br>in touch for 24 hours.
+                </div>
+                <div class="hotline-right">
+                    <div style="font-family:'Oswald'; font-weight:bold; font-size:1.5rem; color:#e31e2d; font-style:italic;">TVS Racing 🐎</div>
+                </div>
             </div>
         </div>
     </div>
 
     <section class="section-padding">
         <div class="container">
-            <div class="welcome-grid" style="display: grid; grid-template-columns: 1fr 1fr; gap: 60px; align-items: center;">
+            <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 60px; align-items: center;" class="welcome-grid">
                 <div class="welcome-text">
                     <span style="font-weight: bold; background: rgba(11, 35, 81, 0.1); color: var(--primary); padding: 5px 15px; border-radius: 30px; font-size: 0.85rem; letter-spacing: 1px;">AUTHORIZED DEALER</span>
                     <h2 style="font-family: 'Oswald'; font-size: 3rem; margin: 20px 0; color: var(--primary); text-transform: uppercase;">The Tirumala TVS Legacy</h2>
-                    <p style="margin-bottom: 25px; line-height: 1.8;">Welcome to Tirumala TVS, your most trusted partner for TVS Motor Company in Bangalore. We are dedicated to delivering the "Racing DNA" experience to every customer, offering a complete range of motorcycles, scooters, and electric vehicles.</p>
+                    <p style="margin-bottom: 25px; line-height: 1.8;">Welcome to Tirumala TVS, your most trusted partner for TVS Motor Company in Bangalore. We are dedicated to delivering the "Racing DNA" experience to every customer.</p>
                     <ul style="margin-bottom: 30px;">
                         <li style="margin-bottom: 10px;">✅ Genuine Spare Parts & Accessories</li>
                         <li style="margin-bottom: 10px;">✅ Certified Service Engineers</li>
@@ -121,7 +125,6 @@
                         <span class="btn btn-outline btn-block" style="font-size:0.8rem; padding:8px;">View Details</span>
                     </div>
                 </a>
-
                 <a href="models/ntorq125.html" class="clean-card">
                     <div class="clean-card-img"><img src="assets/ntorq125.jpg" alt="Ntorq 125" onerror="this.src='https://placehold.co/600x400?text=Ntorq+125'"></div>
                     <div class="clean-card-content">
@@ -130,7 +133,6 @@
                         <span class="btn btn-outline btn-block" style="font-size:0.8rem; padding:8px;">View Details</span>
                     </div>
                 </a>
-
                 <a href="models/raider.html" class="clean-card">
                     <div class="clean-card-img"><img src="assets/raider.jpg" alt="Raider 125" onerror="this.src='https://placehold.co/600x400?text=Raider+125'"></div>
                     <div class="clean-card-content">
@@ -139,7 +141,6 @@
                         <span class="btn btn-outline btn-block" style="font-size:0.8rem; padding:8px;">View Details</span>
                     </div>
                 </a>
-
                 <a href="models/iqube.html" class="clean-card">
                     <div class="clean-card-img"><img src="assets/iqube.jpg" alt="iQube" onerror="this.src='https://placehold.co/600x400?text=iQube'"></div>
                     <div class="clean-card-content">
@@ -148,7 +149,6 @@
                         <span class="btn btn-outline btn-block" style="font-size:0.8rem; padding:8px;">View Details</span>
                     </div>
                 </a>
-
                 <a href="models/zest110.html" class="clean-card">
                     <div class="clean-card-img"><img src="assets/zest110.jpg" alt="Zest 110" onerror="this.src='https://placehold.co/600x400?text=Zest+110'"></div>
                     <div class="clean-card-content">
@@ -157,7 +157,6 @@
                         <span class="btn btn-outline btn-block" style="font-size:0.8rem; padding:8px;">View Details</span>
                     </div>
                 </a>
-
                 <a href="models/apache160.html" class="clean-card">
                     <div class="clean-card-img"><img src="assets/apache160.jpg" alt="Apache 160" onerror="this.src='https://placehold.co/600x400?text=Apache+160'"></div>
                     <div class="clean-card-content">
