--- a/index.html
+++ b/index.html
@@ -189,8 +189,38 @@
                 </div>
                 <div class="clean-card" style="padding: 30px; text-align: left;">
                     <div style="color: #FFD700; font-size: 1.2rem; margin-bottom: 10px;">★★★★★</div>
-                    <p style="font-style: italic; color: #555; margin-bottom: 20px;">"Got my iQube electric scooter. The team guided me on the subsidy process very well."</p>
+                    <p style="font-style: italic; color: #555; margin-bottom: 20px;">"Got my iQube electric scooter. The team guided me on the subsidy process very well. Very happy with the purchase."</p>
                     <strong style="color: var(--primary);">- Sneha R.</strong>
+                </div>
+                <div class="clean-card" style="padding: 30px; text-align: left;">
+                    <div style="color: #FFD700; font-size: 1.2rem; margin-bottom: 10px;">★★★★☆</div>
+                    <p style="font-style: italic; color: #555; margin-bottom: 20px;">"Service center is good. They picked up my Apache 160 for servicing and dropped it back in the evening. Convenient."</p>
+                    <strong style="color: var(--primary);">- Amit V.</strong>
+                </div>
+                <div class="clean-card" style="padding: 30px; text-align: left;">
+                    <div style="color: #FFD700; font-size: 1.2rem; margin-bottom: 10px;">★★★★★</div>
+                    <p style="font-style: italic; color: #555; margin-bottom: 20px;">"Purchased the new Jupiter 110. The mileage is amazing and the boot space is huge. Thanks Tirumala TVS team!"</p>
+                    <strong style="color: var(--primary);">- Karthik G.</strong>
+                </div>
+                <div class="clean-card" style="padding: 30px; text-align: left;">
+                    <div style="color: #FFD700; font-size: 1.2rem; margin-bottom: 10px;">★★★★★</div>
+                    <p style="font-style: italic; color: #555; margin-bottom: 20px;">"Friendly staff and good ambience. They let me take a long test drive of the Ronin before I decided to buy."</p>
+                    <strong style="color: var(--primary);">- Mohammed I.</strong>
+                </div>
+                <div class="clean-card" style="padding: 30px; text-align: left;">
+                    <div style="color: #FFD700; font-size: 1.2rem; margin-bottom: 10px;">★★★★★</div>
+                    <p style="font-style: italic; color: #555; margin-bottom: 20px;">"Bought a Scooty Zest for my daughter. The process was smooth and they gave us a good deal on accessories."</p>
+                    <strong style="color: var(--primary);">- Anjali M.</strong>
+                </div>
+                <div class="clean-card" style="padding: 30px; text-align: left;">
+                    <div style="color: #FFD700; font-size: 1.2rem; margin-bottom: 10px;">★★★★★</div>
+                    <p style="font-style: italic; color: #555; margin-bottom: 20px;">"I was confused between Raider and Apache. The sales executive explained the differences well. Went with Raider!"</p>
+                    <strong style="color: var(--primary);">- Vikram R.</strong>
+                </div>
+                <div class="clean-card" style="padding: 30px; text-align: left;">
+                    <div style="color: #FFD700; font-size: 1.2rem; margin-bottom: 10px;">★★★★☆</div>
+                    <p style="font-style: italic; color: #555; margin-bottom: 20px;">"Good stock of spare parts. I found genuine parts for my old Jupiter here which were not available elsewhere."</p>
+                    <strong style="color: var(--primary);">- Suresh B.</strong>
                 </div>
             </div>
         </div>
